# grider

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml
backend/: .env.example  README.md  main.py  pyproject.toml  pyproject.toml''  requirements.txt
backend/app/: __init__.py  constants.py  constants.py''
backend/app/algorithms/atr/: analyzer.py  calculator.py
backend/app/algorithms/backtest/: __init__.py  engine.py  fee_calculator.py  metrics.py  models.py  trading_logic.py
backend/app/algorithms/grid/: optimizer.py
backend/app/config/: config.yaml  gunicorn.conf.py
backend/app/middleware/: README.md  __init__.py  cors.py  logging.py  registry.py  request_logging.py
backend/app/models/: __init__.py  user.py
backend/app/routes/: __init__.py  analysis_routes.py  basic_routes.py  data_routes.py  demo_routes.py  grid_routes.py  info_routes.py  user_routes.py
backend/app/services/: backtest_service.py  data_service.py  etf_analysis_service.py  suitability_analyzer.py  user_service.py
backend/app/utils/: __init__.py  helper.py  logger.py  validation.py
backend/migrations/: README.md  alembic.ini  env.py
backend/migrations/versions/: 2472b4e8b68e_initial_migration.py  44e3cc49892c_add_visit_count_field.py
backend/tests/: conftest.py  test_backtest_engine.py  test_backtest_integration.py  test_constants.py  test_data_service_backtest.py  test_fee_calculator.py  test_grid_optimizer.py  test_logging_middleware.py  test_metrics.py  test_middleware.py  test_trading_logic.py  test_validation.py
openspec/: AGENTS.md  (+1 more)
(+77 files in other folders)
